--- a/post2.html
+++ b/post2.html
@@ -25,13 +25,13 @@
             <h1>Presentación Clase Desarrollo de Aplicaciones en Red</h1>
             
             <h2>¿Por qué habéis elegido Ingeniería Informática?</h2>
-            <p>He elegido Ingeniería Informática porque desde joven he tenido una gran pasión por la tecnología y la informática. Siempre quise entender cómo funcionaban las cosas detrás de las escenas y cómo podría crear soluciones innovadoras para resolver problemas complejos.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod purus et felis pellentesque, auctor sollicitudin ante cursus. Phasellus eget bibendum justo, id mattis libero. Sed ultricies, sapien non vulputate cursus, erat odio ullamcorper velit, sit amet tincidunt justo erat ut elit. Fusce laoreet metus in arcu laoreet, nec tempus nulla auctor. Donec nec purus sed ligula vehicula bibendum. Nullam in neque at neque viverra auctor. Sed in dolor in tellus fermentum venenatis. Vivamus at nunc vel eros volutpat congue eu in purus.</p>
             
             <h2>¿Cuál es vuestro lenguaje de programación favorito?</h2>
-            <p>Mi lenguaje de programación favorito es Python. Lo encuentro versátil, fácil de aprender y muy poderoso para una amplia gama de aplicaciones, desde desarrollo web hasta análisis de datos.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod purus et felis pellentesque, auctor sollicitudin ante cursus. Phasellus eget bibendum justo, id mattis libero. Sed ultricies, sapien non vulputate cursus, erat odio ullamcorper velit, sit amet tincidunt justo erat ut elit. Fusce laoreet metus in arcu laoreet, nec tempus nulla auctor. Donec nec purus sed ligula vehicula bibendum. Nullam in neque at neque viverra auctor. Sed in dolor in tellus fermentum venenatis. Vivamus at nunc vel eros volutpat congue eu in purus.</p>
 
             <h2>¿Experiencia previa en informática?</h2>
-            <p>Antes de ingresar a la universidad, tuve la oportunidad de trabajar en varios proyectos personales relacionados con el diseño web y la programación básica. Además, realicé un curso en línea sobre fundamentos de programación que solidificó mi interés en este campo.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod purus et felis pellentesque, auctor sollicitudin ante cursus. Phasellus eget bibendum justo, id mattis libero. Sed ultricies, sapien non vulputate cursus, erat odio ullamcorper velit, sit amet tincidunt justo erat ut elit. Fusce laoreet metus in arcu laoreet, nec tempus nulla auctor. Donec nec purus sed ligula vehicula bibendum. Nullam in neque at neque viverra auctor. Sed in dolor in tellus fermentum venenatis. Vivamus at nunc vel eros volutpat congue eu in purus.</p>
         </div>
     </section>
 
